--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -100,7 +100,7 @@
     <Compile Include="classes\Collections\MessageQueue.cs" />
     <Compile Include="classes\DataObjects\Packet.cs" />
     <Compile Include="classes\Handlers\PlayerDispatcher.cs" />
-    <Compile Include="classes\DataObjects\Linkage.cs" />
+    <Compile Include="classes\DataObjects\Location.cs" />
     <Compile Include="classes\DataObjects\Stats.cs" />
     <Compile Include="classes\Functions\XmlHelper.cs" />
     <Compile Include="classes\Collections\Players.cs" />
