--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -70,6 +70,7 @@
     <Compile Include="classes\Controls\CheckEnum.Designer.cs">
       <DependentUpon>CheckEnum.cs</DependentUpon>
     </Compile>
+    <Compile Include="classes\Controls\FlagsEnumEditor.cs" />
     <Compile Include="classes\DataObjects\ExitData.cs" />
     <Compile Include="classes\Handlers\CommandDispatcher.cs" />
     <Compile Include="classes\Handlers\Help.cs" />
