--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -73,6 +73,7 @@
     <Compile Include="classes\Controls\FlagsEnumEditor.cs" />
     <Compile Include="classes\DataObjects\ExitData.cs" />
     <Compile Include="classes\Functions\BuildArea.cs" />
+    <Compile Include="classes\Functions\BuildRoom.cs" />
     <Compile Include="classes\Handlers\CommandDispatcher.cs" />
     <Compile Include="classes\Handlers\Help.cs" />
     <Compile Include="classes\Handlers\Socials.cs" />
