--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -78,6 +78,7 @@
     <Compile Include="classes\Handlers\CommandDispatcher.cs" />
     <Compile Include="classes\Handlers\Help.cs" />
     <Compile Include="classes\Handlers\Socials.cs" />
+    <Compile Include="classes\Mobs\Animals\Dog.cs" />
     <Compile Include="Dialogs\AreaForm.cs">
       <SubType>Form</SubType>
     </Compile>
