--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -77,6 +77,7 @@
     <Compile Include="classes\Functions\BuildRoom.cs" />
     <Compile Include="classes\Handlers\CommandDispatcher.cs" />
     <Compile Include="classes\Handlers\Help.cs" />
+    <Compile Include="classes\Handlers\MobCommands.cs" />
     <Compile Include="classes\Handlers\Socials.cs" />
     <Compile Include="classes\Mobs\Mammals\Canine.cs" />
     <Compile Include="Dialogs\AreaForm.cs">
